fix json resp
